force-app/main/default/objects/Outcome_Payment_Trigger__c/Outcome_Payment_Trigger__c.object-meta.xml
<CustomObject>
    <label>Payment Trigger</label>
    <nameField>
        <label>Outcome Payment Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Payment Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>