force-app/main/default/objects/Outcome_Payment_Trigger__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>Outcome_Payment_Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>