force-app/main/default/objects/Outcome_Payment_Trigger__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <label>Baseline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>