force-app/main/default/objects/Outcome_Payment_Trigger__c/fields/Primary_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Primary_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Outcome</label>
    <referenceTo>Primary_Outcome__c</referenceTo>
    <relationshipLabel>Outcome Payment Triggers</relationshipLabel>
    <relationshipName>Outcome_Payment_Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>